--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,11 @@ import Header from '../components/Header.astro';
 import Hero from '../components/Hero.astro';
 import About from '../components/About.astro';
 import Projects from '../components/Projects.astro';
+import TranslationMap from '../components/TranslationMap.astro';
+import ImpactStats from '../components/ImpactStats.astro';
 import Stories from '../components/Stories.astro';
 import Resources from '../components/Resources.astro';
+import PrayerNetwork from '../components/PrayerNetwork.astro';
 import GetInvolved from '../components/GetInvolved.astro';
 import Footer from '../components/Footer.astro';
 ---
@@ -15,8 +18,11 @@ import Footer from '../components/Footer.astro';
   <Hero />
   <About />
   <Projects />
+  <TranslationMap />
+  <ImpactStats />
   <Stories />
   <Resources />
+  <PrayerNetwork />
   <GetInvolved />
   <Footer />
 </Layout>
